# rinkrat

./: .gitignore  LICENSE  MANIFEST.in  README.md  group-parsing.py  group_parsing_cache.sqlite  planning.md  pyproject.toml  requirements.txt
docs/commands/: README.md  STANDINGS.md
examples/: command-options.py  json-structure.py  mutual-options.py  rankings.py
examples/class-demo/: api.py  main.py  players.py  standings.py  subcommand.py
examples/click/: main.py
examples/git-clone/: git.py
examples/git-clone/commands/: jump.py
examples/old/rinkrat/: order.py  rinkrat.py
rinkrat/: \  api.py  main.py  order.py  rinkrat.py
rinkrat/commands/: standings.py  team.py
src/rinkrat/: __init__.py  __main__.py  api.py  cli.py  config.toml  main.py  standings.py
src/rinkrat/commands/: standings.py
tests/: test_api.py  test_cli.py  test_standings.py
tests/data/: data.py  expected_2023_12_31.json  standings_2023_12_31.json
tests/integration/: test_integration.py
tests/unit/: test_cli.py  test_example.py  test_main.py  test_standings.py
