[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rinkrat"
version = "0.1.0"
authors = [
  { name = "Alex Reynolds" },
]
description = "A command line tool to query NHL stats."
readme = "README.md"
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
keywords = ["NHL", "hockey", "stats"]
requires-python = ">=3.8"
dependencies = [
    "requests >= 2.31.0",
    "requests-cache >= 1.1.1",
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.scripts]
rinkrat = "rinkrat.__main__:run"

[project.urls]
Homepage = "https://github.com/reyncode/rinkrat.git"
Issues = "https://github.com/reyncode/rinkrat/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
  "expected_data: determines which nested dict is returned"
]
